--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~5.2.0",
     "@angular/router": "~5.2.0",
     "nativescript-angular": "~5.2.0",
+    "nativescript-cardview": "^2.0.5",
     "nativescript-imagepicker": "~4.0.1",
     "nativescript-plugin-firebase": "~5.0.5",
     "nativescript-pro-ui": "~3.3.0",
