--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
       "version": "3.4.1"
     },
     "tns-android": {
-      "version": "3.4.1"
+      "version": "3.4.2"
     }
   },
   "scripts": {
@@ -29,6 +29,7 @@
     "nativescript-angular": "~5.2.0",
     "nativescript-barcodescanner": "^2.7.5",
     "nativescript-cardview": "^2.0.5",
+    "nativescript-floatingactionbutton": "^4.1.3",
     "nativescript-imagepicker": "~4.0.1",
     "nativescript-plugin-firebase": "~5.0.5",
     "nativescript-pro-ui": "~3.3.0",
