--- a/firebase.nativescript.json
+++ b/firebase.nativescript.json
@@ -2,7 +2,7 @@
     "using_ios": true,
     "using_android": true,
     "remote_config": false,
-    "messaging": false,
+    "messaging": true,
     "crash_reporting": true,
     "storage": true,
     "facebook_auth": false,
